# C_Bulanci

./: .gitignore  CMakeLists.txt  C_Bulanci.code-workspace  LICENSE  README.md  main  main.c  sdl  structure.md  test.c
Config/: dynamic_array.c  dynamic_array.h  keybinds.c  keybinds.h  sdl.c  sdl.h  text_input.c  text_input.h
Player/: bot.c  bot.h  player.c  player.h
Scenes/Leaderboard/: leaderboard.c  leaderboard.h  leaderboard.txt  leaderboard.txt:Zone.Identifier
Scenes/Main_menu/: main_menu.c  main_menu.h
Scenes/Obstacles/: obstacles.c  obstacles.h
Sounds/: sounds.c  sounds.h
Weapons/Power_ups/: power_ups.c  power_ups.h
Weapons/Projectils/: projectils.c  projectils.h
docs/: game_image.png~RFd9f1f2.TMP  user_input.png~RFd97697.TMP
sdl_playground/: atoms.c
